--- a/GMMPF/GMMPF.html
+++ b/GMMPF/GMMPF.html
@@ -9,83 +9,83 @@
   <body>
     <header>
       <div>
-        <img src="/PoryectoFinal--/img/md-logo-monogram-emblem-style-with-crown-shape-design-template-free-vector-removebg-preview.png" alt="Logo de MOMAZOS DIEGO">
+        <img src="/img/md-logo-monogram-emblem-style-with-crown-shape-design-template-free-vector-removebg-preview.png" alt="Logo de MOMAZOS DIEGO">
       </div>
       <h1>GALERIA</h1>
     </header>
     <nav>
       <ul>
         <li>
-          <a href="/PoryectoFinal--/ProyectoFinal.html">Inicio</a>
+          <a href="/ProyectoFinal.html">Inicio</a>
         </li>
         <li>
-          <a href="GMMPF/GMMPF.html">Galeria</a>
+          <a href="GMMPF.html">Galeria</a>
         </li>
         <li>
-          <a href="/PoryectoFinal--/nosotros/nosotros.html">Nosotros</a>
+          <a href="/nosotros/nosotros.html">Nosotros</a>
         </li>
         <li>
-          <a href="/PoryectoFinal--/subetusmemes/subetusmemes.html">Contacto</a>  
+          <a href="/subetusmemes/subetusmemes.html">Contacto</a>  
         </li>
         <li>
-          <a href="/PoryectoFinal--/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
+          <a href="/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
         </li>
       </ul>
     </nav>
     <section class="gallery">
       <div class="row">
           <div class="blur">
-              <img src="/PoryectoFinal--/img/hq720.jpg" alt="Meme 1">
+              <img src="/img/hq720.jpg" alt="Meme 1">
           </div>
           <div class="blur">
-              <img src="/PoryectoFinal--/img/memes-informaticos-16-646c20a6d078f__700.jpg" alt="Meme 2">
+              <img src="/img/memes-informaticos-16-646c20a6d078f__700.jpg" alt="Meme 2">
           </div>
           <div class="blur">
-              <img src="/PoryectoFinal--/img/GeKqOApW0AAb1jY.jpg" alt="Meme 3">
+              <img src="/img/GeKqOApW0AAb1jY.jpg" alt="Meme 3">
           </div>
       </div>
       <div class="column">
           <div class="blur">
-              <img src="/PoryectoFinal--/img/ssstwitter.com_1733723153095.gif" alt="Meme 4">
+              <img src="/img/ssstwitter.com_1733723153095.gif" alt="Meme 4">
           </div>
           <div class="blur">
-              <img src="/PoryectoFinal--/img/ssstwitter.com_1733655917566.gif" alt="Meme 5">
+              <img src="/img/ssstwitter.com_1733655917566.gif" alt="Meme 5">
           </div>
           <div class="blur">
-              <img src="/PoryectoFinal--/img/ssstwitter.com_1733597028609.gif" alt="Meme 6">
+              <img src="/img/ssstwitter.com_1733597028609.gif" alt="Meme 6">
           </div>
       </div>
       <div class="column">
         <div class="blur">
-            <img src="/PoryectoFinal--/img/EvWuDWRWQAICNZg.jpg" alt="Meme 4">
+            <img src="/img/EvWuDWRWQAICNZg.jpg" alt="Meme 4">
         </div>
         <div class="blur">
-            <img src="/PoryectoFinal--/img/5c61721dbe089.jpg" alt="Meme 5">
+            <img src="/img/5c61721dbe089.jpg" alt="Meme 5">
         </div>
         <div class="blur">
-            <img src="/PoryectoFinal--/img/Gdz1BCgXIAAj5-P.jpg" alt="Meme 6">
+            <img src="/img/Gdz1BCgXIAAj5-P.jpg" alt="Meme 6">
         </div>
       </div>
     <div class="column">
       <div class="blur">
-          <img src="/PoryectoFinal--/img/DAMZyMuXgAEpAfY.jpg" alt="Meme 4">
+          <img src="/img/DAMZyMuXgAEpAfY.jpg" alt="Meme 4">
       </div>
       <div class="blur">
-          <img src="/PoryectoFinal--/img/GbBHTaCWUAAXuDc.jpg" alt="Meme 5">
+          <img src="/img/GbBHTaCWUAAXuDc.jpg" alt="Meme 5">
       </div>
       <div class="blur">
-          <img src="/PoryectoFinal--/img/Gd-50QAXQAAH3LY.jpg" alt="Meme 6">
+          <img src="/img/Gd-50QAXQAAH3LY.jpg" alt="Meme 6">
       </div>
     </div>
     <div class="column">
       <div class="blur">
-          <img src="/PoryectoFinal--/img/EChSkEZXUAEY50k.jpg" alt="Meme 4">
+          <img src="/img/EChSkEZXUAEY50k.jpg" alt="Meme 4">
       </div>
       <div class="blur">
-          <img src="/PoryectoFinal--/img/EfS2HxIXsAMEk5v.jpg" alt="Meme 5">
+          <img src="/img/EfS2HxIXsAMEk5v.jpg" alt="Meme 5">
       </div>
       <div class="blur">
-          <img src="/PoryectoFinal--/img/EreS7myXAAUpVNb.jpg" alt="Meme 6">
+          <img src="/img/EreS7myXAAUpVNb.jpg" alt="Meme 6">
       </div>
     </div>
     </section>
@@ -97,9 +97,9 @@
         <p>© 2024 MOMAZOS DIEGO</p>
       </div>
       <div class="icns">
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_instagram.png" alt="Instagram"></a>
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_twitter.png" alt="Twitter"></a>
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_facebook.png" alt="Facebook"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_instagram.png" alt="Instagram"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_twitter.png" alt="Twitter"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_facebook.png" alt="Facebook"></a>
       </div>
       <div>
         <p><i>2300 Southern Blvd, Bronx, NY</i></p>
