--- a/nosotros/nosotros.html
+++ b/nosotros/nosotros.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div>
-        <img class="imghdr" src="/PoryectoFinal--/img/md-logo-monogram-emblem-style-with-crown-shape-design-template-free-vector-removebg-preview.png" alt="Logo de MOMAZOS DIEGO">
+        <img class="imghdr" src="/img/md-logo-monogram-emblem-style-with-crown-shape-design-template-free-vector-removebg-preview.png" alt="Logo de MOMAZOS DIEGO">
       </div>
       <h1>ABOUT US</h1>
       <p>Conoce más sobre nosotros y nuestra pasión por los memes</p>
@@ -17,19 +17,19 @@
     <nav>
       <ul>
         <li>
-          <a href="/PoryectoFinal--/ProyectoFinal.html">Inicio</a>
+          <a href="/ProyectoFinal.html">Inicio</a>
         </li>
         <li>
-          <a href="/PoryectoFinal--/GMMPF/GMMPF.html">Galería</a>
+          <a href="/GMMPF/GMMPF.html">Galería</a>
         </li>
         <li>
           <a href="nosotros.html">Nosotros</a>
         </li>
         <li>
-          <a href="/PoryectoFinal--/subetusmemes/subetusmemes.html">Contacto</a>  
+          <a href="/subetusmemes/subetusmemes.html">Contacto</a>  
         </li>
         <li>
-          <a href="/PoryectoFinal--/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
+          <a href="/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
         </li>
       </ul>
     </nav>
@@ -45,19 +45,15 @@
       <h2>¿Qué hacemos?</h2>
       <p>Nos especializamos en la creación de memes originales y divertidos. Además, ofrecemos servicios de diseño gráfico y marketing digital para ayudar a otras marcas a conectar con su audiencia a través del humor.</p>
     </div> 
-    <div class="about">
-      <h2>Donde nos encotramos</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d35144.09837403008!2d-73.8910624133767!3d40.85217349730998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f483516ad28b%3A0x56eb41c9795102e!2sZool%C3%B3gico%20del%20Bronx!5e0!3m2!1ses!2ses!4v1733755718151!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
     <br><br><br>
     <footer>
       <div>
         <p>© 2024 MOMAZOS DIEGO</p>
       </div>
       <div class="icns">
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_instagram.png" alt="Instagram"></a>
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_twitter.png" alt="Twitter"></a>
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_facebook.png" alt="Facebook"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_instagram.png" alt="Instagram"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_twitter.png" alt="Twitter"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_facebook.png" alt="Facebook"></a>
       </div>
       <div>
         <p><i>2300 Southern Blvd, Bronx, NY</i></p>
