--- a/ProyectoFinal.html
+++ b/ProyectoFinal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final - MOMAZOS DIEGO</title>
     <link rel="shortcut icon" href="img/favicon (1).ico" type="image/x-icon">
-    <link rel="stylesheet" href="/PoryectoFinal--/stylecss/style.css">
+    <link rel="stylesheet" href="stylecss/style.css">
   </head>
   <body>
     <header>
@@ -20,16 +20,16 @@
           <a href="ProyectoFinal.html">Inicio</a>
         </li>
         <li>
-          <a href="/PoryectoFinal--/GMMPF/GMMPF.html">Galería</a>
+          <a href="/GMMPF/GMMPF.html">Galería</a>
         </li>
         <li>
-          <a href="/PoryectoFinal--/nosotros/nosotros.html">Nosotros</a>
+          <a href="/nosotros/nosotros.html">Nosotros</a>
         </li>
         <li>
-          <a href="/PoryectoFinal--/subetusmemes/subetusmemes.html">Contacto</a>  
+          <a href="/subetusmemes/subetusmemes.html">Contacto</a>  
         </li>
         <li>
-          <a href="/PoryectoFinal--/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
+          <a href="/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
         </li>
       </ul>
     </nav>
@@ -74,7 +74,7 @@
           <a class="g-section" href="GMMPF/GMMPF.html">
             <h2>MEMES DE COCHES</h2>
             <img
-              src="img/F4Y3MNZWEAE7zpC.jpg"
+              src="/img/F4Y3MNZWEAE7zpC.jpg"
               alt="mme4"
               class="g-img"/>
           </a>
@@ -87,9 +87,9 @@
       <p>© 2024 MOMAZOS DIEGO</p>
     </div>
     <div class="icns">
-      <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_instagram.png" alt="Instagram"></a>
-      <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_twitter.png" alt="Twitter"></a>
-      <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_facebook.png" alt="Facebook"></a>
+      <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="img/icon_instagram.png" alt="Instagram"></a>
+      <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="img/icon_twitter.png" alt="Twitter"></a>
+      <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="img/icon_facebook.png" alt="Facebook"></a>
     </div>
     <div>
       <p><i>2300 Southern Blvd, Bronx, NY</i></p>
