--- a/dondeencontrarnos/dondeencontrarnos.html
+++ b/dondeencontrarnos/dondeencontrarnos.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div>
-            <img class="imghdr" src="/PoryectoFinal--/img/md-logo-monogram-emblem-style-with-crown-shape-design-template-free-vector-removebg-preview.png" alt="Logo de MOMAZOS DIEGO">
+            <img class="imghdr" src="/img/md-logo-monogram-emblem-style-with-crown-shape-design-template-free-vector-removebg-preview.png" alt="Logo de MOMAZOS DIEGO">
             </div>
             <h1>ABOUT US</h1>
             <p>Conoce más sobre nosotros y nuestra pasión por los memes</p>
@@ -17,16 +17,16 @@
         <nav>
             <ul>
             <li>
-                <a href="/PoryectoFinal--/ProyectoFinal.html">Inicio</a>
+                <a href="/ProyectoFinal.html">Inicio</a>
             </li>
             <li>
-                <a href="/PoryectoFinal--/GMMPF/GMMPF.html">Galería</a>
+                <a href="/GMMPF/GMMPF.html">Galería</a>
             </li>
             <li>
-                <a href="/PoryectoFinal--/nosotros/nosotros.html">Nosotros</a>
+                <a href="/nosotros/nosotros.html">Nosotros</a>
             </li>
             <li>
-                <a href="/PoryectoFinal--/subetusmemes/subetusmemes.html">Contacto</a>  
+                <a href="/subetusmemes/subetusmemes.html">Contacto</a>  
             </li>
             <li>
                 <a href="dondeencontrarnos.html">Localizacion</a>
