--- a/subetusmemes/subetusmemes.html
+++ b/subetusmemes/subetusmemes.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div>
-        <img class="imghdr" src="/PoryectoFinal--/img/md-logo-monogram-emblem-style-with-crown-shape-design-template-free-vector-removebg-preview.png" alt="Logo de MOMAZOS DIEGO">
+        <img class="imghdr" src="/img/md-logo-monogram-emblem-style-with-crown-shape-design-template-free-vector-removebg-preview.png" alt="Logo de MOMAZOS DIEGO">
       </div>
       <h1>ABOUT US</h1>
       <p>Conoce más sobre nosotros y nuestra pasión por los memes</p>
@@ -17,19 +17,19 @@
     <nav>
       <ul>
         <li>
-          <a href="/PoryectoFinal--/ProyectoFinal.html">Inicio</a>
+          <a href="/ProyectoFinal.html">Inicio</a>
         </li>
         <li>
-          <a href="/PoryectoFinal--/GMMPF/GMMPF.html">Galería</a>
+          <a href="/GMMPF/GMMPF.html">Galería</a>
         </li>
         <li>
-          <a href="/PoryectoFinal--/nosotros/nosotros.html">Nosotros</a>
+          <a href="/nosotros/nosotros.html">Nosotros</a>
         </li>
         <li>
           <a href="subetusmemes.html">Contacto</a>  
         </li>
         <li>
-          <a href="/PoryectoFinal--/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
+          <a href="/dondeencontrarnos/dondeencontrarnos.html">Localizacion</a>
         </li>
       </ul>
     </nav>
@@ -51,9 +51,9 @@
         <p>© 2024 MOMAZOS DIEGO</p>
       </div>
       <div class="icns">
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_instagram.png" alt="Instagram"></a>
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_twitter.png" alt="Twitter"></a>
-        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/PoryectoFinal--/img/icon_facebook.png" alt="Facebook"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_instagram.png" alt="Instagram"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_twitter.png" alt="Twitter"></a>
+        <a href="https://www.youtube.com/watch?v=OdDWMQ7Cotw"><img src="/img/icon_facebook.png" alt="Facebook"></a>
       </div>
       <div>
         <p><i>2300 Southern Blvd, Bronx, NY</i></p>
