--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final - MOMAZOS DIEGO</title>
     <link rel="shortcut icon" href="img/favicon (1).ico" type="image/x-icon">
-    <link rel="stylesheet" href="stylecss/style.css">
+    <link rel="stylesheet" href="stylecss/index.css">
   </head>
   <body>
     <header>
