--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <ul>
         <li>
-          <a href="ProyectoFinal.html">Inicio</a>
+          <a href="index.html">Inicio</a>
         </li>
         <li>
           <a href="/GMMPF/GMMPF.html">Galería</a>
