--- a/GMMPF/GMMPF.html
+++ b/GMMPF/GMMPF.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li>
-          <a href="/ProyectoFinal.html">Inicio</a>
+          <a href="/index.html">Inicio</a>
         </li>
         <li>
           <a href="GMMPF.html">Galeria</a>
